vlib/v/checker/tests/nil.vv
fn main() {
	value := nil
	println(value)
}
